# hack_chat

./: .gitignore  CMakeLists.txt  CodeStyle.md  README.md  main.cpp  server_main.cpp
include/: ChatClientGUI.h  NetWork.h
src/: ChatClientGUI.cpp  NetWork.cpp
test/: client_main.cpp
